--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -29,10 +29,9 @@
             type="com.example.android.architecture.blueprints.todoapp.tasks.TasksViewModel" />
     </data>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="?android:attr/listPreferredItemHeight"
-        android:orientation="horizontal"
+        android:layout_height="wrap_content"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingBottom="@dimen/list_item_padding"
@@ -44,6 +43,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
             android:onClick="@{(view) -> viewmodel.completeTask(task, ((CompoundButton)view).isChecked())}"
             android:checked="@{task.completed}" />
 
@@ -51,11 +52,40 @@
             android:id="@+id/title_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_toEndOf="@id/complete_checkbox"
+            android:layout_toRightOf="@id/complete_checkbox"
+            android:textStyle="bold"
+            android:textAppearance="@style/TextAppearance.AppCompat.Title"
+            android:text="@{task.titleForList}"
+            app:completedTask="@{task.completed}"
+            android:layout_toLeftOf="@id/pinned"
+            android:layout_toStartOf="@id/pinned" />
+        <TextView
+            android:id="@+id/description_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/title_text"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
-            android:text="@{task.titleForList}"
-            app:completedTask="@{task.completed}" />
-    </LinearLayout>
+            android:text="@{task.descriptionForList}"
+            app:completedTask="@{task.completed}"
+            android:layout_toLeftOf="@id/pinned"
+            android:layout_toEndOf="@id/complete_checkbox"
+            android:layout_toRightOf="@id/complete_checkbox"
+            android:layout_toStartOf="@id/pinned" />
+        <ImageButton
+            android:id="@+id/pinned"
+            android:layout_width="@dimen/pin_image_width"
+            android:layout_height="@dimen/pin_image_height"
+            android:layout_alignParentEnd="true"
+            android:background="@drawable/baseline_push_pin_black_18dp"
+            android:layout_margin="2dp"
+            android:onClick="@{(view) -> viewmodel.pinTask(task)}"
+            app:pinnedTask="@{task.pinned}"
+            android:scaleType="fitXY"
+            android:layout_alignParentRight="true" />
+    </RelativeLayout>
 </layout>
