--- a/app/src/main/res/menu/tasks_fragment_menu.xml
+++ b/app/src/main/res/menu/tasks_fragment_menu.xml
@@ -22,6 +22,11 @@
         android:title="@string/menu_filter"
         android:icon="@drawable/ic_filter_list"
         app:showAsAction="always" />
+    <item android:id="@+id/search"
+        android:title="@string/menu_search"
+        android:icon="@android:drawable/ic_menu_search"
+        app:showAsAction="collapseActionView|ifRoom"
+        app:actionViewClass="android.widget.SearchView" />
     <item
         android:id="@+id/menu_clear"
         android:title="@string/menu_clear"
