--- a/app/src/main/res/layout/tasks_frag.xml
+++ b/app/src/main/res/layout/tasks_frag.xml
@@ -24,7 +24,7 @@
 
         <variable
             name="viewmodel"
-            type="com.example.android.architecture.blueprints.todoapp.tasks.TasksViewModel" />
+            type="com.example.android.notesapp.tasks.TasksViewModel" />
 
     </data>
 
@@ -35,7 +35,7 @@
         android:layout_height="match_parent">
 
 
-        <com.example.android.architecture.blueprints.todoapp.ScrollChildSwipeRefreshLayout
+        <com.example.android.notesapp.ScrollChildSwipeRefreshLayout
             android:id="@+id/refresh_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -102,7 +102,7 @@
                 </LinearLayout>
             </RelativeLayout>
 
-        </com.example.android.architecture.blueprints.todoapp.ScrollChildSwipeRefreshLayout>
+        </com.example.android.notesapp.ScrollChildSwipeRefreshLayout>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/add_task_fab"
