--- a/app/src/main/res/menu/tasks_fragment_menu.xml
+++ b/app/src/main/res/menu/tasks_fragment_menu.xml
@@ -35,4 +35,8 @@
         android:id="@+id/menu_refresh"
         android:title="@string/refresh"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/menu_signout"
+        android:title="@string/signout"
+        app:showAsAction="never" />
 </menu>
