--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -17,8 +17,9 @@
 
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/tasks_fragment_dest">
+    app:startDestination="@id/fullscreenIntroFragment">
 
     <fragment
         android:id="@+id/task_detail_fragment_dest"
@@ -81,4 +82,13 @@
     <argument
         android:name="userMessage"
         android:defaultValue="0" />
+    <fragment
+        android:id="@+id/fullscreenIntroFragment"
+        android:name="com.example.android.notesapp.tasks.FullscreenIntroFragment"
+        android:label="@string/app_name"
+        tools:layout="@layout/fragment_fullscreen_intro" >
+    <action
+        android:id="@+id/action_fullscreen_intro_to_tasksFragment"
+        app:destination="@id/tasks_fragment_dest" />
+    </fragment>
 </navigation>
