--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,8 +21,9 @@
     <color name="colorTextPrimary">#000000</color>
     <color name="colorGrey">#757575</color>
 
-    <drawable name="completedTaskBackground">#CCCCCC</drawable>
+    <color name="black_overlay">#66000000</color>
 
     <drawable name="touchFeedback">#CFD8DC</drawable>
+    <drawable name="completedTaskBackground">#CCCCCC</drawable>
 
 </resources>
