--- a/app/src/main/res/menu/tasks_fragment_menu.xml
+++ b/app/src/main/res/menu/tasks_fragment_menu.xml
@@ -17,15 +17,10 @@
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
-        android:id="@+id/menu_filter"
-        android:title="@string/menu_filter"
-        android:icon="@drawable/ic_filter_list"
-        app:showAsAction="always" />
     <item android:id="@+id/search"
         android:title="@string/menu_search"
         android:icon="@android:drawable/ic_menu_search"
-        app:showAsAction="collapseActionView|ifRoom"
+        app:showAsAction="ifRoom"
         app:actionViewClass="android.widget.SearchView" />
     <item
         android:id="@+id/menu_clear"
